tests/negative/traits/mismatch_virtuality.orng
trait Lol {
    virtual fn lmao(&mut self) -> ()
}

impl Lol for Int {
    fn lmao(&mut self) -> () {
        self^ = 30
    }
}